--- a/public/index.html
+++ b/public/index.html
@@ -40,5 +40,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <script src="https://raw.githubusercontent.com/LizzardMedeiros/lite-loaderjs/master/index.js"></script>
   </body>
 </html>
